# trifinger-rl-example

./: .gitignore  README.md  setup.cfg  trifinger.toml
scripts/: _validate_policy.py  validate.py
trifinger_rl_example/: example.py
trifinger_rl_example/policies/: lift.pt  push.pt
