[metadata]
name = trifinger_rl_example
version = attr: trifinger_rl_example.__version__
description = Example package for submitting a reinforcement learning policy to the TriFinger cluster
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause


[options]
packages = find:
install_requires =
    numpy
    gymnasium
    torch
    trifinger_rl_datasets

[options.package_data]
trifinger_rl_example.policies = *.pt
